--- a/Info.plist
+++ b/Info.plist
@@ -17,9 +17,9 @@
 	<key>CFBundlePackageType</key>
 	<string>BNDL</string>
 	<key>CFBundleShortVersionString</key>
-	<string>1.3.0</string>
+	<string>1.3.1</string>
 	<key>CFBundleVersion</key>
-	<string>DF</string>
+	<string>E0</string>
 	<key>NSHumanReadableCopyright</key>
 	<string>Copyright © 2004, Blacktree, Inc.</string>
 	<key>NSPrincipalClass</key>
@@ -48,7 +48,7 @@
 	<key>QSRequirements</key>
 	<dict>
 		<key>version</key>
-		<string>3930</string>
+		<string>4001</string>
 	</dict>
 </dict>
 </plist>
