--- a/Info.plist
+++ b/Info.plist
@@ -48,7 +48,9 @@
 	<key>QSRequirements</key>
 	<dict>
 		<key>version</key>
-		<string>3930</string>
+		<string>4005</string>
+		<key>osRequired</key>
+		<string>10.9</string>
 	</dict>
 </dict>
 </plist>
